# CryptIT

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.ps1  build.sh  conanfile.txt  debug_build.sh  install.sh  setup.sh  times.txt
.github/workflows/: build-and-test.yml  build-debug-test.yml  build-release.yml  cmake-multi-platform.yml  codeql.yml
src/: AddIconToBinary.cmake  CMakeLists.txt  CryptIT.cpp  FileManager.cpp  crypto.cpp  crypto.hpp  cryptoUI.cpp  decrypt.hpp  encrypt.hpp  helper.cpp  helper.hpp  main.cpp
src/assets/: icon.icns  logo.pyxel
src/include/: CryptIT.h  FileManager.h  crypto.h  cryptoUI.h  helper.h  threadpool.h
src/tests/: CMakeLists.txt  CmakeLists.txt  crypto_test.cc  helper_test.cc  test_main.cc
tests/: CmakeLists.txt
